test/tests/stages/8_loops/valid/extra_credit/switch_with_continue_2.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: sum
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitDecl: 
                  CVariableDeclaration: 
                    TIdentifier: i
                    CSingleInit: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    Int: 
                    None: 
                CBinary: 
                  CLessThan: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: i
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CSwitch: 
                          TIdentifier: (null)
                          Bool: 0
                          CBinary: 
                            CRemainder: 
                            CVar: 
                              TIdentifier: i
                              None: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                            None: 
                          CCompound: 
                            CB: 
                              List[2]: 
                                CS: 
                                  CCase: 
                                    TIdentifier: (null)
                                    CConstant: 
                                      CConstInt: 
                                        TInt: 0
                                      None: 
                                    CContinue: 
                                      TIdentifier: (null)
                                CS: 
                                  CDefault: 
                                    TIdentifier: (null)
                                    CExpression: 
                                      CAssignment: 
                                        None: 
                                        CVar: 
                                          TIdentifier: sum
                                          None: 
                                        CBinary: 
                                          CAdd: 
                                          CVar: 
                                            TIdentifier: sum
                                            None: 
                                          CConstant: 
                                            CConstInt: 
                                              TInt: 1
                                            None: 
                                          None: 
                                        None: 
                          List[0]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: sum
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
