test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_default_in_nested_statement.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CVar: 
                  TIdentifier: a
                  None: 
                CCompound: 
                  CB: 
                    List[3]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          CFor: 
                            TIdentifier: (null)
                            CInitDecl: 
                              CVariableDeclaration: 
                                TIdentifier: i
                                CSingleInit: 
                                  CConstant: 
                                    CConstInt: 
                                      TInt: 0
                                    None: 
                                  None: 
                                Int: 
                                None: 
                            CBinary: 
                              CLessThan: 
                              CVar: 
                                TIdentifier: i
                                None: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 10
                                None: 
                              None: 
                            CAssignment: 
                              None: 
                              CVar: 
                                TIdentifier: i
                                None: 
                              CBinary: 
                                CAdd: 
                                CVar: 
                                  TIdentifier: i
                                  None: 
                                CConstant: 
                                  CConstInt: 
                                    TInt: 1
                                  None: 
                                None: 
                              None: 
                            CCompound: 
                              CB: 
                                List[2]: 
                                  CS: 
                                    CContinue: 
                                      TIdentifier: (null)
                                  CS: 
                                    CWhile: 
                                      TIdentifier: (null)
                                      CConstant: 
                                        CConstInt: 
                                          TInt: 1
                                        None: 
                                      CDefault: 
                                        TIdentifier: (null)
                                        CNull: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CNull: 
                List[0]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
